Fix links affected by notebook renames

--- a/notebooks/02-01-Calibrating-bias-images.ipynb
+++ b/notebooks/02-01-Calibrating-bias-images.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "The purpose of calibrating bias images is three-fold:\n",
     "\n",
-    "+ Subtract overscan if you have decided your science will be better if you subtract overscan. See [this discussion of overscan](01.08-Overscan.ipynb) for some guidance. \n",
+    "+ Subtract overscan if you have decided your science will be better if you subtract overscan. See [this discussion of overscan](01-08-Overscan.ipynb) for some guidance. \n",
     "+ Trim the overscan region off of the image if it is present, regardless of whether you have chosen to subtract the overscan.\n",
     "+ Combine the bias images into a \"combined\" bias to be used in calibrating the rest of the images. The purpose of combining several images is to reduce as much as possible the read noise in the combined bias.\n",
     "\n",
