--- a/notebooks/03-02-Real-dark-current-noise-and-other-artifacts.ipynb
+++ b/notebooks/03-02-Real-dark-current-noise-and-other-artifacts.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "The dark current on modern CCDs, even relatively inexpensive ones, is very small. In a typical exposure the dark current is likely smaller, maybe much smaller, than the read noise. Despite that, it is worth examining some dark frames from your camera. because not all pixels have the same dark current. Some, called hot pixels, have much higher dark current than the rest of the sensor. Some sensors have non-astronomical sources of counts whose value are proportional to exposure time, like dark current, but whose origin is nonthermal effects.\n",
     "\n",
-    "As we did in the [notebook about overscan](01.08-Overscan.ipynb), we will focus on a pair of cameras to illustrate this point and demonstrate how to take similar images with your camera and analyze them."
+    "As we did in the [notebook about overscan](01-08-Overscan.ipynb), we will focus on a pair of cameras to illustrate this point and demonstrate how to take similar images with your camera and analyze them."
    ]
   },
   {
