--- a/notebooks/06-03-incorporating-masks-into-calibrated-science-images.ipynb
+++ b/notebooks/06-03-incorporating-masks-into-calibrated-science-images.ipynb
@@ -15,10 +15,10 @@
     "\n",
     "Two of them are the same for all of the science images:\n",
     "\n",
-    "+ Hot pixels unlikely to be properly calibrated by subtracting dark current, discussed in [Identifying hot pixels](03.03-Identifying-hot-pixels.ipynb).\n",
-    "+ Bad pixels identified by `ccdproc.ccdmask` from flat field images, discussed in [Creating a mask with `ccdmask`](04.02-Creating-a-mask.ipynb).\n",
+    "+ Hot pixels unlikely to be properly calibrated by subtracting dark current, discussed in [Identifying hot pixels](03-03-Identifying-hot-pixels.ipynb).\n",
+    "+ Bad pixels identified by `ccdproc.ccdmask` from flat field images, discussed in [Creating a mask with `ccdmask`](04-02-Creating-a-mask.ipynb).\n",
     "\n",
-    "The third, identifying cosmic rays, discussed in [Cosmic ray removal](06.02-Cosmic-ray-removal.ipynb), will by its nature be different for each science image.\n",
+    "The third, identifying cosmic rays, discussed in [Cosmic ray removal](06-02-Cosmic-ray-removal.ipynb), will by its nature be different for each science image.\n",
     "\n",
     "The first two masks could be added to science images at the time the science images are calibrated, if desired. They are added to the science images here, as a separate step, because in many situations it is fine to omit masking entirely and there is no particular advantage to introducing it earlier."
    ]
@@ -125,7 +125,7 @@
    "source": [
     "## Detect cosmic rays \n",
     "\n",
-    "Cosmic ray detection was discussed in detail in an [earlier section](06.02-Cosmic-ray-removal.ipynb). Here we loop over all of the calibrated science images and: \n",
+    "Cosmic ray detection was discussed in detail in an [earlier section](06-02-Cosmic-ray-removal.ipynb). Here we loop over all of the calibrated science images and: \n",
     "\n",
     "+ detect cosmic rays in them,\n",
     "+ combine the cosmic ray mask with the mask that applies to all images,\n",
