Fix several file/directory names

--- a/notebooks/01-08-Overscan.ipynb
+++ b/notebooks/01-08-Overscan.ipynb
@@ -28,14 +28,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "\n",
     "from astropy.nddata import CCDData\n",
     "from astropy.visualization import hist\n",
     "from ccdproc import subtract_overscan\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from convenience_functions import show_image\n",
-    "\n",
-    "download_base_url = 'http://physics.mnstate.edu/craig/ccd-guide/'"
+    "from convenience_functions import show_image"
    ]
   },
   {
@@ -57,9 +57,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bias_lfc = CCDData.read('python_imred_data/ccd.001.0.fits.gz', unit='count')\n",
-    "science_g_lfc = CCDData.read('python_imred_data/ccd.037.0.fits.gz', unit='count')\n",
-    "flat_g_lfc = CCDData.read('python_imred_data/ccd.014.0.fits.gz', unit='count')"
+    "cryo_path = Path('example-cryo-LFC')\n",
+    "bias_lfc = CCDData.read(cryo_path / 'ccd.001.0.fits', unit='count')\n",
+    "science_g_lfc = CCDData.read(cryo_path / 'ccd.037.0.fits', unit='count')\n",
+    "flat_g_lfc = CCDData.read(cryo_path / 'ccd.014.0.fits', unit='count')"
    ]
   },
   {
@@ -148,10 +149,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wasp = CCDData.read(download_base_url + 'wasp-10-b-S001-R001-C041-r.fit.gz', unit='adu')\n",
-    "dark1000 = CCDData.read(download_base_url + 'dark-test-0002d1000.fit.gz', unit='adu')\n",
-    "flat = CCDData.read(download_base_url + 'AutoFlat-PANoRot-r-Bin1-006.fit.gz', unit='adu')\n",
-    "master = CCDData.read(download_base_url + 'master_bias.fit.gz', unit='adu')"
+    "therma_path = Path('example-thermo-electric')\n",
+    "kelt = CCDData.read(therma_path / 'kelt-16-b-S001-R001-C084-r.fit', unit='adu')\n",
+    "dark1000 = CCDData.read('dark-test-0002d1000.fit.bz2', unit='adu')\n",
+    "flat = CCDData.read(therma_path / 'AutoFlat-PANoRot-r-Bin1-006.fit', unit='adu')\n",
+    "master = CCDData.read('combined_bias_100_images.fit.bz2', unit='adu')"
    ]
   },
   {
@@ -162,7 +164,7 @@
    "source": [
     "plt.figure(figsize=(20,10))\n",
     "\n",
-    "plt.plot(wasp.data.mean(axis=0), label='night sky average')\n",
+    "plt.plot(kelt.data.mean(axis=0), label='night sky average')\n",
     "plt.plot(master.data.mean(axis=0), label='100 bias combined')\n",
     "plt.plot(dark1000.data.mean(axis=0), label='1000sec dark average')\n",
     "plt.plot(flat.data.mean(axis=0), label='flat average')\n",
