--- a/notebooks/03-05-Calibrate-dark-images.ipynb
+++ b/notebooks/03-05-Calibrate-dark-images.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ex1_path_raw = Path('python_imred_data')\n",
+    "ex1_path_raw = Path('example-cryo-LFC')\n",
     "\n",
     "ex1_images_raw = ImageFileCollection(ex1_path_raw)\n",
     "ex1_darks_raw = ImageFileCollection(ex1_path_raw / 'darks')\n",
@@ -126,10 +126,7 @@
     "                                         ccd_kwargs={'unit': 'adu'}, # CCDData requires a unit for the image if \n",
     "                                                                     # it is not in the header\n",
     "                                         return_fname=True           # Provide the file name too.\n",
-    "                                        ):\n",
-    "    \n",
-    "    save_name, _ = file_name.split('.gz')\n",
-    "    \n",
+    "                                        ):    \n",
     "    # Subtract the overscan\n",
     "    ccd = ccdp.subtract_overscan(ccd, overscan=ccd[:, 2055:], median=True)\n",
     "    \n",
@@ -137,7 +134,7 @@
     "    ccd = ccdp.trim_image(ccd[:, :2048])\n",
     "    \n",
     "    # Save the result\n",
-    "    ccd.write(ex1_path_reduced / save_name)"
+    "    ccd.write(ex1_path_reduced / file_name)"
    ]
   },
   {
