--- a/notebooks/06-00-Reducing-science-images.ipynb
+++ b/notebooks/06-00-Reducing-science-images.ipynb
@@ -115,7 +115,7 @@
     "exposure = 'exptime'\n",
     "\n",
     "ifc_reduced = ccdp.ImageFileCollection(reduced_path)\n",
-    "ifc_raw = ccdp.ImageFileCollection('python_imred_data')"
+    "ifc_raw = ccdp.ImageFileCollection('example-cryo-LFC')"
    ]
   },
   {
@@ -319,7 +319,7 @@
    "outputs": [],
    "source": [
     "combo_calibs = ifc_reduced.summary[ifc_reduced.summary['combined'].filled(False).astype('bool')]\n",
-    "combo_calibs['date-obs', 'file', 'imagetyp', 'object', 'filter', exposure]"
+    "combo_calibs['date-obs', 'file', 'imagetyp', 'filter', exposure]"
    ]
   },
   {
