--- a/notebooks/02-01-Calibrating-bias-images.ipynb
+++ b/notebooks/02-01-Calibrating-bias-images.ipynb
@@ -70,7 +70,7 @@
    "source": [
     "### Data for this example\n",
     "\n",
-    "The data for this example can be downloaded from [http://www.stsci.edu/~etollerud/python_imred_data.tar](http://www.stsci.edu/~etollerud/python_imred_data.tar)\n",
+    "The data for this example can be downloaded from [http://doi.org/10.5281/zenodo.3254683](http://doi.org/10.5281/zenodo.3254683)\n",
     "\n",
     "In what follows, the unpacked data is presumed to be available in the same directory as this notebook."
    ]
@@ -88,7 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = ccdp.ImageFileCollection('python_imred_data')"
+    "example_cryo_path = Path('example-cryo-LFC')\n",
+    "files = ccdp.ImageFileCollection(example_cryo_path)"
    ]
   },
   {
@@ -106,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "darks_only = ccdp.ImageFileCollection('python_imred_data/darks/')\n",
+    "darks_only = ccdp.ImageFileCollection(example_cryo_path / 'darks')\n",
     "darks_only.summary['file', 'imagetyp', 'exptime']"
    ]
   },
@@ -279,16 +280,14 @@
     "                                                             # it is not in the header\n",
     "                                 return_fname=True           # Provide the file name too.\n",
     "                                ):\n",
-    "    save_name, _ = file_name.split('.gz')\n",
-    "    \n",
-    "    # Subtract the overscan\n",
+    "        # Subtract the overscan\n",
     "    ccd = ccdp.subtract_overscan(ccd, overscan=ccd[:, 2055:], median=True)\n",
     "    \n",
     "    # Trim the overscan\n",
     "    ccd = ccdp.trim_image(ccd[:, :2048])\n",
     "    \n",
     "    # Save the result\n",
-    "    ccd.write(calibrated_data / save_name)"
+    "    ccd.write(calibrated_data / file_name)"
    ]
   },
   {
