--- a/notebooks/03-02-Real-dark-current-noise-and-other-artifacts.ipynb
+++ b/notebooks/03-02-Real-dark-current-noise-and-other-artifacts.ipynb
@@ -104,7 +104,7 @@
    "outputs": [],
    "source": [
     "calibrated_images = Path('.')\n",
-    "combined_dark_lfc = CCDData.read(calibrated_images / 'combined_dark_300.000.fits')"
+    "combined_dark_lfc = CCDData.read(calibrated_images / 'combined_dark_300.000.fits.bz2')"
    ]
   },
   {
@@ -223,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dark_1000 = CCDData.read('https://zenodo.org/record/2634177/files/master_dark_exposure_1000.0.fit.bz2?download=1')\n",
+    "dark_1000 = CCDData.read('master_dark_exposure_1000.0.fit.bz2')\n",
     "show_image(dark_1000, cmap='gray')"
    ]
   },
