--- a/notebooks/05-03-Calibrating-the-flats.ipynb
+++ b/notebooks/05-03-Calibrating-the-flats.ipynb
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The raw data should be in the directory `python_imred_data`"
+    "The raw data should be in the directory `example-cryo-LFC`"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_data = Path('python_imred_data')\n",
+    "raw_data = Path('example-cryo-LFC')\n",
     "\n",
     "ifc_raw = ccdp.ImageFileCollection(raw_data)"
    ]
@@ -332,10 +332,7 @@
     "                                         ccd_kwargs={'unit': 'adu'}, # CCDData requires a unit for the image if \n",
     "                                                                     # it is not in the header\n",
     "                                         return_fname=True           # Provide the file name too.\n",
-    "                                        ):\n",
-    "    \n",
-    "    save_name, _ = file_name.split('.gz')\n",
-    "    \n",
+    "                                        ):    \n",
     "    # Subtract the overscan\n",
     "    ccd = ccdp.subtract_overscan(ccd, overscan=ccd[:, 2055:], median=True)\n",
     "    \n",
@@ -350,7 +347,7 @@
     "                             exposure_time='exptime', exposure_unit=u.second)\n",
     "\n",
     "    # Save the result; there are some duplicate file names so pre-pend \"flat\"\n",
-    "    ccd.write(reduced_path / ('flat-' + save_name))"
+    "    ccd.write(reduced_path / ('flat-' + file_name))"
    ]
   },
   {
