Make some column munging a little more robust

--- a/notebooks/04-02-Creating-a-mask.ipynb
+++ b/notebooks/04-02-Creating-a-mask.ipynb
@@ -66,13 +66,22 @@
     "ex2_path = Path('example2-reduced')\n",
     "\n",
     "ifc = ccdp.ImageFileCollection(ex2_path)\n",
-    "ifc.summary.remove_columns(['history', 'comment'])"
+    "\n",
+    "for long_values in ['history', 'comment']:\n",
+    "    try:\n",
+    "        ifc.summary.remove_column(long_values)\n",
+    "    except KeyError:\n",
+    "        # These two columns were not present, so removing them failed.\n",
+    "        # Just keep going.\n",
+    "        pass"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "flats = (ifc.summary['imagetyp'] == 'FLAT') & (ifc.summary['combined'] != True)\n",
