Fix a couple of bad links

--- a/notebooks/05-03-Calibrating-the-flats.ipynb
+++ b/notebooks/05-03-Calibrating-the-flats.ipynb
@@ -195,7 +195,7 @@
    "source": [
     "### Subtract overscan and trim, if necessary\n",
     "\n",
-    "The overscan is useful for the LFC and needs to be subtracted and trimmed off. See [this example in the dark reduction notebook](03.05-Calibrate-dark-images.ipynb#Decide-which-calibration--steps-to-take) for a review of the overscan parameters. The overscan region is the Python slice `[:, 2055:]` while the region to be retained after trimming is the Python slice `[:, :2048]`."
+    "The overscan is useful for the LFC and needs to be subtracted and trimmed off. See [this example in the dark reduction notebook](03-05-Calibrate-dark-images.ipynb#Decide-which-calibration--steps-to-take) for a review of the overscan parameters. The overscan region is the Python slice `[:, 2055:]` while the region to be retained after trimming is the Python slice `[:, :2048]`."
    ]
   },
   {
@@ -356,7 +356,7 @@
    "source": [
     "## Example 2: Dark frames are scaled\n",
     "\n",
-    "The images in this example, like in the previous notebooks, is a thermo-electrically cooled CCD described in more detail in the [overscan notebook](01.08-Overscan.ipynb#Case-2:-Thermo-electrically-cooled-Apogee-Aspen-CG16M). \n",
+    "The images in this example, like in the previous notebooks, is a thermo-electrically cooled CCD described in more detail in the [overscan notebook](01-08-Overscan.ipynb#Case-2:-Thermo-electrically-cooled-Apogee-Aspen-CG16M). \n",
     "\n",
     "We'll go through this example twice: once with a single image to explain each step, then processing all of the flat frames in the directory of raw data.\n",
     "\n",
@@ -668,5 +668,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
